--- a/monsters/depths/index.html
+++ b/monsters/depths/index.html
@@ -128,10 +128,12 @@
 <p class="MonsterStats">噬咬 (高[2d12]+9 傷害, 4 穿透), 26 HP, 5 護甲</p>
 <p class="MonsterStats"><span class="Tags">及遠, 強力, 毀亂</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 吋厚的金屬皮革, 超自然知識, 翅膀</p>
-<p class="MonsterDescription">The end of all things shall be a burning—of tree and earth and of the air itself. It shall come upon the plains and mountains not from beyond this world but from within it. Birthed from the womb of deepest earth shall come the Dragon that Will End the World. In its passing all will become ash and bile and the Dungeon World a dying thing will drift through planar space devoid of life. They say to worship the Apocalypse Dragon is to invite madness. They say to love it is to know oblivion. The awakening is coming. <em>本能</em>: 終結世界</p>
-<ul><li>Set a disaster in motion</li>
-<li>Breathe forth the elements</li>
-<li>Act with perfect foresight</li></ul>
+<p class="MonsterDescription">
+	萬物應以燃燒之姿終結──樹木、大地與空氣皆然。終末將降臨於平原與山脈上，非來自世界之外，而是來自其內。從大地深處孕育出的巨龍將終結這個世界，祂所經之處只會留下怒火與餘燼，而瀕死的地城世界也終將在毫無生命的空虛中漂流……有人說，崇拜啟示錄巨龍是瘋狂之舉，而傾慕祂也將意味理解毀滅的真正意義。聽，祂的甦醒之時將至。 <em>本能</em>: 終結世界</p>
+<ul>
+	<li>掀起一場災難</li>
+	<li>元素吐息</li>
+	<li>在完美預見未來的情況下採取行動</li></ul>
 
 <h3 class="MonsterName">混沌眷族 (Chaos Spawn)	<span class="Tags">單獨, 不定型</span></h3>
 <p class="MonsterStats">混亂之觸 (d10 傷害), 19 HP, 1 護甲</p>
