--- a/monsters/planes/index.html
+++ b/monsters/planes/index.html
@@ -160,24 +160,30 @@
 <p class="MonsterStats">烈焰 (d8+1 傷害, 無視護甲), 14 HP, 4 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 由烈焰構成</p>
-<p class="MonsterDescription">“Stop rubbing that lamp, you idiot. I do not care what you have read, it will not grant you wishes. I brought you here to show you something real, something true. See this mural? It shows the ancient city. The true city that came before. They called it Majilis and it was made of brass by the spirits. They had golem servants and human lovers and, in that day, it was said you could trade them a year of your life for a favor. We are not here to gather treasure this night, fool, we are here to learn. The djinn still sometimes come to these places, and you must understand their history if you are to know how to behave. They are powerful and wicked and proud and you must know them if you hope to survive a summoning. Now, bring the lamp here and we will light it, it grows dark and these ruins are dangerous at night.” <em>本能</em>: To burn eternally</p>
-<ul><li>Grant power for a price</li>
-<li>Summon the forces of the City of Brass</li></ul>
+<p class="MonsterDescription">
+	「別再擦拭那盞油燈了，你個白癡。我才不在乎你之前讀過什麼，它不會實現你的願望的。我帶你來這裡是要給你看一些真實可信的東西。看到這幅壁畫了嗎？它描繪出了一座古老的城市，一座真正的大城市。祂們稱其為瑪日利斯（Majilis, 阿拉伯語），由精魂們以黃銅鑄造而成。祂們擁有魔像作為僕從，與人類情人享樂，據說在那些日子，你能夠用你一年的人生來換取祂們的幫助。我們今晚來這裡可不是為了收集寶藏，傻瓜，我們來這是為了學習。巨靈有時仍會造訪這些地方，而如果你想知道該怎麼做，你就必須先理解祂們的歷史。祂們強大、邪惡、且驕傲，你要是想在召喚中倖存，就必須了解祂們。現在，給我把那盞燈拿過來，我們要點亮它……天要黑了，而這些廢墟在晚上可不怎麼安全。」 <em>本能</em>: 永遠地燃燒</p>
+<ul>
+	<li>授予權力和力量，但伴隨著代價</li>
+	<li>召喚黃銅之城的軍勢</li></ul>
 <h3 class="MonsterName">地獄獵犬 (Hell Hound)	<span class="Tags">集團, 異位面, 組織</span></h3>
 <p class="MonsterStats">熾焰啃咬 (d8 傷害), 10 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 藏於陰影</p>
-<p class="MonsterDescription">When one reneges on a deal, does not the debtor come for payment? Does the owed party not send someone to collect what is due? So too with the Powers Below. They only want what is theirs. A howling pack of shadows, flame and jagged bone, driven by the hunting horn. They will not cease, they cannot be evaded. <em>本能</em>: To pursue</p>
-<ul><li>Follow despite all obstacles</li>
-<li>Spew fire</li>
-<li>Summon the forces of hell on their target</li></ul>
+<p class="MonsterDescription">
+	當人失約背信，債務人豈不會來追討償還？被欠款的團體又豈不會派人來收取債務呢？在那陰間地府的勢力也是如此，祂們想要的只不過討回屬於祂們的東西。被狩獵的號角所驅使，一群呼嚎著的影子、烈焰、以及鋸齒骸骨被差遣到地表。牠們永遠不會聽下，也永遠無法被逃避。 <em>本能</em>: 追獵</p>
+<ul>
+	<li>不顧一切阻礙緊緊追尋</li>
+	<li>噴出火焰</li>
+	<li>召喚地獄之力降臨到牠們的目標身上</li></ul>
 <h3 class="MonsterName">小惡魔 (Imp)	<span class="Tags">成群, 異位面, 聰穎, 組織</span></h3>
-<p class="MonsterStats">Flame gout (d6 傷害, 無視護甲), 7 HP, 1 護甲</p>
+<p class="MonsterStats">火焰團 (d6 傷害, 無視護甲), 7 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 短程, 遠程</span></p>
-<p class="MonsterDescription">These tiny observer-demons often act as a first-time binding subject by neophyte warlocks. They can be found infesting arcane cabals, drinking potions when no one watches, and chasing pets and servants with tiny pitchforks. A caricature of true demonhood, these little creatures are, thankfully, not too difficult to bind or extinguish. <em>本能</em>: To harass</p>
-<ul><li>Send information back to hell</li>
-<li>Cause mischief</li></ul>
-<h3 class="MonsterName">Inevitable	<span class="Tags">集團, 大型, 魔法, 謹慎, 不定型, 異位面</span></h3>
+<p class="MonsterDescription">
+	這些小巧的惡魔觀察者經常會被當作新手魔道士的第一個誓約對象。你經常能在祕法結社發現牠們，在無人看管時偷喝藥水，拿著小惡魔叉追逐欺負著寵物和僕從。這些小小生物的存在是對真正惡魔的可笑模仿，而值得慶幸的是，牠們並不會太難以被約束或消滅。 <em>本能</em>: 騷擾</p>
+<ul>
+	<li>把情報送回地獄</li>
+	<li>進行惡作劇</li></ul>
+<h3 class="MonsterName">命定者 (Inevitable)	<span class="Tags">集團, 大型, 魔法, 謹慎, 不定型, 異位面</span></h3>
 <p class="MonsterStats">Hammer (d10+1 傷害), 21 HP, 5 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 由秩序構成</p>
@@ -186,12 +192,14 @@
 <li>Enforce a law of nature or man</li>
 <li>Give a glimpse of destiny</li></ul>
 <h3 class="MonsterName">墮魂蟲 (Larvae)	<span class="Tags">成群, 狡猾, 異位面, 聰穎</span></h3>
-<p class="MonsterStats">Slime (低[2d4] 傷害), 10 HP, 0 護甲</p>
+<p class="MonsterStats">黏液 (低[2d4] 傷害), 10 HP, 0 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
-<p class="MonsterDescription">Those who have seen visions of the Planes Below, and survived with their sanity intact, speak of masses of these writhing wretches. Maggots with the faces of men and women, crying out for salvation in a nest of flames. Sometimes, they can be goaded out through a rip in the planar caul and emerge, wriggling and in torment, into our world. Once here, they spread misery and sickness during their mayfly lives before expiring into a slurry of gore. All in all, an enticement to do good deeds in life. <em>本能</em>: To suffer</p>
-<ul><li>Fill them with despair</li>
-<li>Beg for mercy</li>
-<li>Draw evil attention</li></ul>
+<p class="MonsterDescription">
+	那些曾看見過下界位面的風景，並理智完好無損地存活下來的人們，都提及了這些大量、蠕動的可憐蟲：長著男人或女人面孔的蛆蟲，在焚身烈焰的巢穴中哭喊著救贖。有時候，牠們會被驅趕，穿過位面之間的縫隙，在痛苦中扭動著降臨到我們的世界。一旦降臨，牠們將在那如蜉蝣短暫的生命中散播痛苦與疾病，然後化做一攤惡臭的血水悽慘死去。總歸來說，牠們就是借鏡，提醒我們該在活著時多做好事。 <em>本能</em>: 受苦</p>
+<ul>
+	<li>讓他們充滿絕望</li>
+	<li>乞求憐憫</li>
+	<li>引來邪惡的注意</li></ul>
 <h3 class="MonsterName">夢魘 (Nightmare)	<span class="Tags">成群, 大型, 魔法, 駭人, 異位面</span></h3>
 <p class="MonsterStats">踐踏 (d6+1 傷害), 7 HP, 4 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
