--- a/monsters/hordes/index.html
+++ b/monsters/hordes/index.html
@@ -117,48 +117,60 @@
 <p class="MonsterStats">啃咬 (d6 傷害), 7 HP, 4 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 蟲巢聯繫, 類昆蟲</p>
-<p class="MonsterDescription">With good cause, they say that these creatures (like all insects, really) are claimed by the powers of Law. They are order made flesh—a perfectly stratified society in which every larva, hatchling and adult knows its place in the great hive. The formian is some strange intersection of men and ants. (Though there are winged tribes that look like wasps out in the Western Desert, I’ve heard. And some with great sawtooth arms like mantids in the forests of the east.) Tall, with a hard shell and a harder mind, these particular formians are the bottom caste. They work the hills and honeycombs with single-minded joy that can be known only by such an alien mind. <em>本能</em>: To follow orders</p>
-<ul><li>Raise the alarm</li>
-<li>Create value for the hive</li>
-<li>Assimilate</li></ul>
+<p class="MonsterDescription">
+	出於充分的理由，人們傳說這些生物（就跟所有昆蟲一樣）受到秩序之力所管轄。牠們的血肉身軀就是秩序的體現──一個階層分明的完美社會，每個幼蟲、若蟲、以及成蟲各司其職，清楚知曉自己在偉大蟲巢中的位置。弗米蟻族是某種古怪的物種，同時混雜了人類和螞蟻的特徵。（不過，我曾聽說在西部沙漠的帶翼部落看起來像是黃蜂，而那些在東方森林，長有巨大鋸齒前肢的部族則更像是螳螂。）高大，身披著堅硬的甲殼，以及更加頑固堅硬的心靈，這些特殊的弗米蟻族是整個蟲巢中的底層物種。牠們在山丘和蜂巢中一心一意的勞動著，享受著只有他們那異質心智能夠理解的單純喜悅。 <em>本能</em>: 遵循命令</p>
+<ul>
+	<li>發出警報</li>
+	<li>為蟲巢創造價值</li>
+	<li>吸收</li></ul>
 <h3 class="MonsterName">弗米蟻監工 (Formian Taskmaster)	<span class="Tags">集團, 組織, 聰穎</span></h3>
 <p class="MonsterStats">刺鞭 (d8 傷害), 6 HP, 3 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 蟲巢聯繫, 類昆蟲</p>
-<p class="MonsterDescription">It takes two hands to rule an empire: one to wield the scepter and one to crack the whip. These ant-folk are that whip. Lucky for them, with two extra arms, that’s a lot of whip to crack. They oversee the vast swarms of worker drones that set to build the mighty caverns and ziggurats that dot the places that formians can be found. One in a hundred, these brutes stand two or three feet taller than their pale, near-mindless kin and have a sharper, crueler wit to match. They’ll often ignore the soft races (as we’re known) if we don’t interfere in a project, but get in the way of The Great Work and expect nothing less than their full attention. You don’t want their full attention. <em>本能</em>: To command</p>
-<ul><li>Order drones into battle</li>
-<li>Set great numbers in motion</li></ul>
+<p class="MonsterDescription">
+	統治帝國需要兩隻手：一手持握權杖，一手揮舞長鞭。而這些蟻族正是那根長鞭。牠們可真幸運，憑著那多出來的兩雙手臂，能揮舞的鞭子變得更多了。牠們負責監督大量成群的工兵，命令牠們建造出巨大的洞窟隧道、以及點綴著弗米蟻族棲居之地的金字塔神廟。每一百隻弗米蟻族中就有一隻，這些大塊頭比牠們蒼白、幾乎無心智的同類還要高上二到三呎，並有著更加敏欸、更加殘忍的智慧與之配合。牠們經常會無視那些身體柔軟的種族（也就是我們），只要我們不會干擾到牠們的工程就好。然而，一旦妨礙到了牠們偉大的工程計畫，那你可以預期牠們的注意力將全數降臨到你身上。相信我，你不會想要被牠們全神關注的。 <em>本能</em>: 發號施令</p>
+<ul>
+	<li>命令工兵投入戰鬥</li>
+	<li>使大量蟻族行動起來</li></ul>
 <h3 class="MonsterName">弗米蟻百夫長 (Formian Centurion)	<span class="Tags">成群, 聰穎, 組織</span></h3>
 <p class="MonsterStats">刺矛 (高[2d6]+2 傷害), 7 HP, 3 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 蟲巢聯繫, 類昆蟲, 翅膀</p>
-<p class="MonsterDescription">Whether in the form of a legionnaire, part of the formian standing army, or as a praetorian guard to the queen, every formian hive contains a great number of these most dangerous insectoids. Darker in carapace, often scarred with furrows and the ceremonial markings that set them apart from their drones, the formian centurions are their fighting force and rightly so. Born, bred and living for the singular purpose of killing the enemies of their hive, they fight with one mind and a hundred swords. Thus far, the powers of Law have seen fit to spare mankind a great war with these creatures, but we’ve seen them in skirmish—descending sometimes on border towns with their wings flickering in the heat or spilling up from a sandy mound to wipe clean a newly-dug mine. Theirs is an orderly bloodshed, committed with no pleasure but the completion of a goal. <em>本能</em>: To fight as ordered</p>
-<ul><li>Advance as one</li>
-<li>Summon reinforcements</li>
-<li>Give a life for the hive</li></ul>
+<p class="MonsterDescription">
+	無論是做為軍團的成員、弗米蟻族常備軍的士兵、或是女王身旁的禁衛軍，每個弗米蟻族的蟲巢中都大量部屬著這種最最危險的昆蟲族裔。身披更為暗沉的甲殼、且經常飾有紋路和儀式性記號，這些特徵使牠們與弗米蟻工兵區別開來。弗米蟻百夫長就是弗米蟻族的軍事力量，這可是千真萬確。出生、養育、活著的唯一目的就是殺死蟲巢裡的敵人，牠們在戰場上同心合一，百劍齊發。到目前為止，秩序的力量似乎足以讓人類免於與這些生物發生大規模的戰事，但我們確實曾在小型衝突中見過牠們的身姿──有時在酷熱中振翅，降臨於邊境城鎮、有時則從沙丘中鑽出，清洗了新開鑿的礦場。牠們的殺戮是純粹秩序的執行，毫無喜悅可言，僅僅是為了完成目標。 <em>本能</em>: 按照命令戰鬥</p>
+<ul>
+	<li>齊頭並進</li>
+	<li>召集援軍</li>
+	<li>為蟲巢獻出生命</li></ul>
 <h3 class="MonsterName">弗米蟻女王 (Formian Queen)	<span class="Tags">單獨, 巨型, 組織, 聰穎, 囤財者</span></h3>
 <p class="MonsterStats">粉碎下顎 (d10+5 傷害), 24 HP, 3 護甲</p>
 <p class="MonsterStats"><span class="Tags">及遠, 強力</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 蟲巢聯繫, 類昆蟲</p>
-<p class="MonsterDescription">At the heart of every hive, no matter its size or kind, lives a queen. As large as any giant, she sits protected by her guard, served by every drone and taskmaster with her own, singular purpose: to spread her kind and grow the hive. To birth the eggs. To nurture. We do not understand the minds of these creatures but it is known they can communicate with their children, somehow, over vast distances and that they begin to teach them the ways of earth and stone and war while still pale and wriggling larvae, without a word. To kill one is to set chaos on the hive; without their queen, the rest turn on one another in a mad, blind rage. <em>本能</em>: To spread formians</p>
-<ul><li>Call every formian it spawned</li>
-<li>Release a half-formed larval mutation</li>
-<li>Organize and issue orders</li></ul>
+<p class="MonsterDescription">
+	在每一座蟲巢的中心，無論其規模或種類，都住著一名女王。體型如巨人一般龐大，她坐在直屬禁衛軍的保護之下，被每一個工兵和監工所服侍，執行著只屬於她自己的唯一目的：產卵、哺育、散播她的族類、使蟲巢壯大繁盛。我們無法理解這些生物的心智，但我們知道她們能夠以某種方式跨越遙遠的距離與她們的孩子溝通，且在這些子嗣仍是蒼白蠕動的幼蟲時，她們就已經開始教導牠們關於泥壤、岩石、以及戰爭的種種，無須透過任何言語。殺死女王就等同是為整個蟲巢帶來無盡的混亂；一旦失去了牠們的女王，剩餘的蟻族就會在瘋狂盲目的憤怒之下彼此互相殘殺。 <em>本能</em>: 傳播延續弗米蟻族</p>
+<ul>
+	<li>召集每個她所生下的弗米蟻族</li>
+	<li>誕生一隻尚未成形的幼蟲突變體</li>
+	<li>組織並下達命令</li></ul>
 <h3 class="MonsterName">豺狼人追跡者 (Gnoll Tracker)	<span class="Tags">集團, 組織, 聰穎</span></h3>
 <p class="MonsterStats">弓 (d8 傷害), 6 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">短程, 遠程</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 氣味追蹤者</p>
-<p class="MonsterDescription">Once they scent your blood, you can’t escape. Not without intervention from the gods, or the duke’s rangers at least. The desert scrub is a dangerous place to go exploring on your own and if you fall and break your leg or eat the wrong cactus, well, you’ll be lucky if you die of thirst before the gnolls find you. They prefer their prey alive, see—cracking bones and the screams of the dying lend a sort of succulence to a meal. Sickening creatures, no? They’ll hunt you, slow and steady, as you die. If you hear laughter in the desert wind, well, best pray Death comes to take you before they do. <em>本能</em>: To prey on weakness</p>
-<ul><li>Doggedly track prey</li>
-<li>Strike at a moment of weakness</li></ul>
+<p class="MonsterDescription">
+	一旦牠們聞到你的鮮血，你就再也逃不掉了──至少在沒有諸神的干預、或公爵麾下一整隊遊騎兵的協助下是這樣。沙漠灌叢對於獨自一人的探索而言是個危險的地方，倘若你不幸摔斷了腿或吃錯了仙人掌，嗯……如果你在豺狼人發現你之前就死於飢渴，那你還能稱得上是幸運了。牠們更喜歡活生生的獵物，你瞧──對牠們來說，喀擦粉碎的骨頭以及臨死前的尖叫聲能為這頓大餐更添上一股多汁肥美的風味。令人作嘔的生物，可不是嗎？牠們會追捕你，緩慢但穩健，一直到你死去。如果你在沙漠荒風中聽見了那殘忍的吠笑，那麼你最好祈禱死神能比牠們早一步把你帶走。 <em>本能</em>: 捕食弱者</p>
+<ul>
+	<li>執著地追蹤獵物</li>
+	<li>趁著虛弱的時候發起攻擊</li></ul>
 <h3 class="MonsterName">豺狼人特使 (Gnoll Emissary)	<span class="Tags">單獨, 神聖, 聰穎, 組織</span></h3>
 <p class="MonsterStats">儀式匕首 (d10+2 傷害), 18 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 敏銳嗅覺</p>
-<p class="MonsterDescription">Oh, an emissary! How nice. I suspect you didn’t know the gnolls had ambassadors, did you? Yes, even these mangy hyenas have to make nice sometimes. No, no, not with us. Nor the dwarves, neither. No, the emissary is the one, among his packmates, who trucks directly with their dripping demon lord. Frightening? Too right. Every hound has a master with his hand on the chain. This gnoll hears his master’s voice. Hears it and obeys. <em>本能</em>: To share divine insight</p>
-<ul><li>Pass on demonic influence</li>
-<li>Drive the pack into a fervor</li></ul>
-<h3 class="MonsterName">豺狼人菁英 (Gnoll Alpha)	<span class="Tags">單獨, 聰穎, 組織</span></h3>
+<p class="MonsterDescription">
+	噢，一名特使！真不錯。我猜你不知道豺狼人也有特使，對吧？沒錯，就連這些髒兮兮的鬣狗有時也得表現得友善一些。不，不不，不是對我們，也不是對那些矮人。不對。這名特使是牠們族群之中的唯一，能與牠們那滴淌血水的惡魔領主直接對談的存在。可怕嗎？說得真是太對了。每頭獵犬的背後都有著一個牽著鎖鏈的主人。這名豺狼人能聽見牠主人的聲音。牠聽見，並且服從。 <em>本能</em>: 分享神性的見解</p>
+<ul>
+	<li>傳播惡魔的影響</li>
+	<li>讓整個族群充滿激情</li></ul>
+<h3 class="MonsterName">豺狼人首領 (Gnoll Alpha)	<span class="Tags">單獨, 聰穎, 組織</span></h3>
 <p class="MonsterStats">寶劍 (高[2d10] 傷害, 1 穿透), 12 HP, 2 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 敏銳嗅覺</p>
@@ -250,9 +262,11 @@
 <p class="MonsterStats">三叉戟 (d8 傷害), 6 HP, 2 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 短程, 遠程</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 水棲</p>
-<p class="MonsterDescription">The triton ruling houses were chosen, they say, at the dawn of time. Granted lordship over all the races of the sea by some now-forgotten god. These bloodlines continue, passing rulership from father to daughter and mother to son through the ages. Each is allowed to rule their city in whatever way they choose—some alone or with their spouses, others in council of brothers and sisters. In ages past, they were known for their sagacity and bloodlines of even-temper were respected above all else. The tidecallers prophecy is changing that: nobles are expected to be strong, not wise. The nobles have begun to respond, and it is feared by some that the ancient blood is changing forever. It may be too late to turn back. Time and tide wait for none. <em>本能</em>: To lead</p>
-<ul><li>Stir tritons to war</li>
-<li>Call reinforcements</li></ul>
+<p class="MonsterDescription">
+	傳說，早在時間之初，梭羅魚人的王室就已被揀選，由某個被世界遺忘的神祇授予了他們統管海洋中所有種族的權力。這些血脈延續至今，由父傳給女，母傳給子，將統治權代代相傳。王室中的每個成員都被允許以自己選擇的方式治理他們的城市──有些人孤身一人、或與他們的配偶一起、有些則選擇與他們的兄弟姊妹共組議會來治理國事。在過往的年代，他們以聰穎睿智和沉著穩重的血統而聞名並受人敬重，但喚潮者的預言正在改變這一切：「貴族應是強大的，而不是睿智的。」貴族們已經對此做出回應，且有人擔憂這古老的血脈將從此被永遠地改變……時間和潮汐不等人，現在回頭或許已經太晚了。 <em>本能</em>: 領導</p>
+<ul>
+	<li>煽動梭羅魚人發起戰爭</li>
+	<li>呼叫增援</li></ul>
 
 
           </div>
