--- a/monsters/planes/index.html
+++ b/monsters/planes/index.html
@@ -179,18 +179,20 @@
 <p class="MonsterStats">火焰團 (d6 傷害, 無視護甲), 7 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 短程, 遠程</span></p>
 <p class="MonsterDescription">
-	這些小巧的惡魔觀察者經常會被當作新手魔道士的第一個誓約對象。你經常能在祕法結社發現牠們，在無人看管時偷喝藥水，拿著小惡魔叉追逐欺負著寵物和僕從。這些小小生物的存在是對真正惡魔的可笑模仿，而值得慶幸的是，牠們並不會太難以被約束或消滅。 <em>本能</em>: 騷擾</p>
+	這些小巧的惡魔觀察者經常會被當作新手魔道士的第一個誓縛對象。你經常能在祕法結社發現牠們，在無人看管時偷喝藥水，拿著小惡魔叉追逐欺負著寵物和僕從。這些小小生物的存在是對真正惡魔的可笑模仿，而值得慶幸的是，牠們並不會太難以被約束或消滅。 <em>本能</em>: 騷擾</p>
 <ul>
 	<li>把情報送回地獄</li>
 	<li>進行惡作劇</li></ul>
 <h3 class="MonsterName">命定者 (Inevitable)	<span class="Tags">集團, 大型, 魔法, 謹慎, 不定型, 異位面</span></h3>
-<p class="MonsterStats">Hammer (d10+1 傷害), 21 HP, 5 護甲</p>
+<p class="MonsterStats">重錘 (d10+1 傷害), 21 HP, 5 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 由秩序構成</p>
-<p class="MonsterDescription">All things come to an end. Reality bleeds from the cut of entropy’s knife. At the edge of time itself stand the inevitable. Massive, powerful and seemingly carved from star-stuff themselves, the inevitable intervene only where magic or calamity have undone the skein of fate. Where the arrogant and powerful boil the substance of destiny away and seek to undermine the very laws of reality, the inevitable arrive to guide things back to the proper order. Unshakable, seemingly immune to mortal harm and utterly enigmatic, it is said that the Inevitable are all that will remain when time’s long thread has run out. <em>本能</em>: To preserve order</p>
-<ul><li>End a spell or effect</li>
-<li>Enforce a law of nature or man</li>
-<li>Give a glimpse of destiny</li></ul>
+<p class="MonsterDescription">
+	萬物皆有盡頭。現實被熵質刀刃割得鮮血淋漓。在時間的盡頭，命定者佇立著。魁梧、強大、彷彿由星辰之物雕琢而成，命定者只會在魔法或災變動搖命運的枷鎖時才會出手介入。當強大傲慢之人嘗試燒乾命運的質理，試著破壞現實的定理法則十，命定者將會現身，引導事物回歸正常的秩序。祂們無可動搖，似乎不受凡俗之物所傷，祂們是純粹的神秘。據說當時間的長河走到盡頭，萬物迎來終結之時，唯有命定者持續屹立，永遠留存。 <em>本能</em>: 維持秩序</p>
+<ul>
+	<li>終止一個法術或效果</li>
+	<li>執行自然或人定的法則</li>
+	<li>使人窺見命運的驚鴻一瞥</li></ul>
 <h3 class="MonsterName">墮魂蟲 (Larvae)	<span class="Tags">成群, 狡猾, 異位面, 聰穎</span></h3>
 <p class="MonsterStats">黏液 (低[2d4] 傷害), 10 HP, 0 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
@@ -204,25 +206,33 @@
 <p class="MonsterStats">踐踏 (d6+1 傷害), 7 HP, 4 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 烈焰和陰影</p>
-<p class="MonsterDescription">The herd came from a pact made in the days when folk still inhabited the Blasted Steppes. Horselords, they were, who travelled those lands. Born in the saddle, it was said. One of theirs, in a bid to dominate his peers, made a black pact with some fell power and traded away his finest horses. He had some power, sure—but what’s a thousand year dynasty when a life is so short? Now the fiends of the pit ride on the finest horses ever seen. Coats of shining oil and manes of tormented flame: these are steeds of hell’s cavalry. <em>本能</em>: To ride rampant</p>
-<ul><li>Sheath a rider in hellish flame</li>
-<li>Drive them away</li></ul>
+<p class="MonsterDescription">
+	這些獸群誕生自一個古老的契約，在那時，人們仍居住在燒夷草原，他們是遊牧之王，據說他們生於馬鞍，遊走遍歷著這片土地。為了統治他的同胞，他們之中的某個人將他最好的駿馬交易了出去，與那墮落權勢締結了黑暗的誓約。他得到了夢寐以求的權力，當然──但生命是如此短暫，千年王朝又有什麼意義呢？現在，深淵中的邪魔們騎著有史以來最上等的馬匹。身披閃亮燃油和苦痛烈焰形成的鬃毛：牠們就是地獄騎兵的戰馬。 <em>本能</em>: 肆意馳騁</p>
+<ul>
+	<li>讓騎手被地獄烈焰所包覆</li>
+	<li>驅趕他們</li></ul>
 <h3 class="MonsterName">夸塞魔 (Quasit)	<span class="Tags">成群, 異位面</span></h3>
 <p class="MonsterStats">地獄武器 (d6 傷害), 7 HP, 2 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Adaptable form</p>
-<p class="MonsterDescription">An imp with some ambition. A quasit is a kind of foot soldier in the demon realm. A commoner, armed with fangs or claws or wings or some other thing to give it just a little edge over its hellish peers. Commonly bound by warlocks to carry heavy loads or build bridges or guard their twisted towers, a quasit can take on many forms, none of them pleasant. <em>本能</em>: To serve</p>
-<ul><li>Attack with abandon</li>
-<li>Inflict pain</li></ul>
+<p class="MonsterQualities"><strong>特性:</strong> 可改適的外型</p>
+<p class="MonsterDescription">
+	懷抱些許野心的小惡魔，夸塞魔是惡魔國度中的一種卑微步兵。牠們是介平民，但裝備著尖牙、利爪、翅膀、或其他可以讓牠比牠們地獄同族多一點優勢的事物。經常被做為魔道士的誓縛魔寵並被派去搬運重物、建造橋樑、或守衛他們那扭曲的高塔等等，夸塞魔可以呈現出多種不同的型態，但其中沒有任何一種外貌會讓人感到愉快。 <em>本能</em>: 服侍</p>
+<ul>
+	<li>胡亂肆意攻擊</li>
+	<li>造成痛苦</li></ul>
 <h3 class="MonsterName">泰拉斯奎巨獸 (The Tarrasque)	<span class="Tags">單獨, 巨型, 異位面</span></h3>
-<p class="MonsterQualities"><strong>特性:</strong> Impervious</p>
-<p class="MonsterDescription">The Tarrasque. Legendary unstoppable juggernaut—eater of cities and swallower of ships, horses, and knights. A creature unseen in an age but about whom all kinds of stories are told. One thread of truth weaves through these stories. It cannot be killed. No blade can pierce its stony shell nor spell penetrate the shield it somehow bears. Stories say, though, that the will of one pure soul can send it to slumber, though what that means and, by the gods, where such a thing might be found, pray we do not ever need to learn. It slumbers. Somewhere in the periphery of the planar edge, it sleeps for now. <em>本能</em>: To consume</p>
-<ul><li>Swallow a person, group, or place whole</li>
-<li>Release a remnant of a long-eaten place from its gullet</li></ul>
-<h3 class="MonsterName">Word Demon	<span class="Tags">單獨, 異位面, 魔法</span></h3>
-<p class="MonsterDescription">All of mortal magic is just words. Spells are prayers, rote formula, runes cast, or songs sung. Letters, words, sentences, and syntax strung together in a language that the whole world itself might understand. By way of words we can make our fellows cry or exult, can paint pictures and whisper desire to the gods. No little wonder, then, that in all that power is intent. That every word we utter, if repeated and meaning or emotion given to it, can spark a kind of unintentional summoning. Word daemons are called by accident, appear at random and are often short-lived, but come to attend a particular word. Capricious, unpredictable and dangerous, yes—but possibly useful, depending on the word. <em>本能</em>: To further their word</p>
-<ul><li>Cast a spell related to their word</li>
-<li>Bring their word into abundance</li></ul>
+<p class="MonsterQualities"><strong>特性:</strong> 堅不可摧，無可動搖</p>
+<p class="MonsterDescription">
+	泰拉斯奎巨獸，傳說中那不可被阻擋的洪荒毀滅之力──萬城的吞噬者，吞嚥船艦、駿馬、騎士的災難。這種生物已經有數個世紀沒有被目擊，但關於牠那各種各樣的故事流傳著。在這些鄉野傳說之中貫穿著一個真理：牠無法被任何事物給殺死。沒有任何刀刃能刺穿牠那磐石般的外殼，也沒有任何咒語能夠穿透牠所承載的護盾。然而傳說中提到，一名純淨靈魂的意志能使牠陷入酣眠。至於這究竟意味著什麼，又該去哪裡找到這樣的東西，求神垂憐，祈禱我們永遠也不需要知道。牠沉睡著。在位面邊界外圍的某處，至少現在，牠仍沉睡著。 <em>本能</em>: 吞噬一切</p>
+<ul>
+	<li>把整個人、團體、或地方一口吞下</li>
+	<li>從牠的食道中吐出一個久遠以前被吞吃地點的殘骸遺跡</li></ul>
+<h3 class="MonsterName">文字惡魔 (Word Demon)	<span class="Tags">單獨, 異位面, 魔法</span></h3>
+<p class="MonsterDescription">
+	所有凡間的魔法都不過是文字的一種。法術是祈禱、公式背誦、受鑄的符文、以及被唱出的歌曲。文字、詞彙、句子、和文法被串連在一起，形成了能夠被整個世界本身所理解的語言。透過文字，我們能夠使我們的同伴哀哭或狂喜、可以描繪圖像、並向神明低聲訴說我們的渴望。毫無疑問，意圖是這一切力量的根源。我們所說的每一個字，如果被重覆唸誦並賦予意義和情感，將可以引發某種無意識的召喚：文字惡魔會被意外召喚，隨機出現，通常只會短暫駐留，且伴隨著特定文字而來。是的，牠們反覆無常、不可預測、危險──但有時候，取決於文字而定，牠們也能帶來幫助。 <em>本能</em>: 增長牠的文字</p>
+<ul>
+	<li>施放一個與牠代表文字有關的法術</li>
+	<li>使牠代表的文字繁盛增多</li></ul>
 
 
           </div>
